--- a/index.html
+++ b/index.html
@@ -35,16 +35,8 @@
         </div>
         <div >
 
-            <ul class = "list-group card-body">
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-                    <li class = "list-group-item"> a </li>
-
+            <ul class = "searchHistory list-group card-body">
+                  <!-- <li class = "list-group-item"> a </li> -->
 
             </ul>
         </div>  
